@@ -23,7 +23,8 @@ import org.apache.streampipes.extensions.api.declarer.IExtensionModuleExport;
 import org.apache.streampipes.extensions.api.migration.IModelMigrator;
 import org.apache.streampipes.extensions.api.pe.IStreamPipesPipelineElement;
 import org.apache.streampipes.sinks.internal.jvm.datalake.DataLakeSink;
-import org.apache.streampipes.sinks.internal.jvm.notification.NotificationProducer;
+import org.apache.streampipes.sinks.internal.jvm.datalake.migrations.DataLakeSinkMigrationV1;
+import org.apache.streampipes.sinks.internal.jvm.notification.InternalStreamPipesNotificationSink;
 
 import java.util.Collections;
 import java.util.List;
@@ -38,12 +39,12 @@ public class InternalSinksExtensionModuleExports implements IExtensionModuleExpo
   public List<IStreamPipesPipelineElement<?>> pipelineElements() {
     return List.of(
         new DataLakeSink(),
-        new NotificationProducer()
+        new InternalStreamPipesNotificationSink()
     );
   }
 
   @Override
   public List<IModelMigrator<?, ?>> migrators() {
-    return Collections.emptyList();
+    return List.of(new DataLakeSinkMigrationV1());
   }
 }
